updating api swagger doc
