# app/controllers/transactions_controller.rb
@@ -1,5 +1,5 @@
 class TransactionsController < ApplicationController
-  before_action :set_user_id, only: [:initiate_transaction]
+  before_action :set_user_id, only: [:show]
 
   def show
     render json: @user.get_paginated_transactions(filter_params, get_page_number, get_page_size)
@@ -9,7 +9,7 @@ class TransactionsController < ApplicationController
 
   def filter_params
    obj = {}
-   obj[:transaction_type] = params[:transaction_type] if params[:transaction_type].present?
+   obj[:transaction_type_id] = TransactionType.find_by(name: params[:transaction_type].downcase).id if params[:transaction_type].present?
    obj[:contact_id] = params[:contact_id] if params[:contact_id].present?
    obj
   end
