# swagger/v1/swagger.yaml
@@ -238,16 +238,35 @@ paths:
               - transaction_type
               - contact_id
               - amount
-  "/users/:id/transactions":
+  transactions:
     get:
-      summary: Fetch all the transaction for a user
+      summary: Fetch all the transaction for a user. Pass the signed jwt token as
+        a bearer token to identify the user for which the transaction needs to be
+        fetched
       tags:
       - Transactions
       parameters:
-      - name: id
-        in: path
-        description: User Id for which transaction are required
-        required: true
+      - name: transaction_type
+        in: query
+        description: 'Fetch transactions for one of the allowed transaction types:
+          Debit | Credit'
+        schema:
+          type: string
+      - name: contact_id
+        in: query
+        description: Fetch transactions for this particular contact id
+        schema:
+          type: integer
+      - name: page_number
+        in: query
+        description: Pagination supported through page number. If not given, page_number
+          will be 1
+        schema:
+          type: integer
+      - name: page_size
+        in: query
+        description: Pagination supported through page number. If not given, page_size
+          will be 50
         schema:
           type: integer
       responses:
